# meal-planner-app

./: .env.local.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  Makefile  README.md  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  vitest.config.ts
.github/workflows/: ci.yml  release.yml  supabase-migrate.yml  tests.yml
app/: globals.css  layout.tsx  page.tsx
app/docs/: head.tsx  layout.tsx  page.tsx
app/groceries/: Groceries.module.css  GroceriesClient.tsx  page.tsx
app/household/: HouseholdClient.tsx  page.tsx
app/invite/: page.tsx  (+1 more)
supabase/: config.toml
tests/: api-audit.test.ts  api-auth.test.ts  api-client.test.ts  api-errors.test.ts  api-groceries.test.ts  api-health-route.test.ts  api-helpers.test.ts  api-household-invites.test.ts  api-household-management.test.ts  api-household-update.test.ts  api-household.test.ts  api-households-route.test.ts  api-ingredient-suggest.test.ts  api-logout-route.test.ts  api-me.test.ts  api-meals.test.ts  api-openapi-route.test.ts  api-plans-generate.test.ts  api-plans-mutations.test.ts  api-plans.test.ts  auth-callback.test.ts  auth-otp.test.ts  email-utils.test.ts  groceries-client.test.ts  home-page.test.tsx  household-invite-accept.test.ts  household-list.test.ts  ingredient-suggestions-client-ui.test.tsx  ingredient-suggestions.test.ts  ingredients-client.test.ts  meals-client.test.ts  page-layout.test.tsx  plans-client.test.ts  plans-generation.test.ts  plans-mutations.test.ts  plans-server.test.ts  supabase-mock.ts  ui-nav.test.tsx  ui-primitives.test.tsx
types/: redoc.d.ts
(+115 files in other folders)
