[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "your-package-name"
version = "0.1.0"
description = "Python project using uv for dependency management and Ruff for lint/format."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
dependencies = [
  "Django>=5.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "pytest>=8",
  "pytest-django>=4.8",
  "pytest-cov>=5",
  "ty",
  "uv>=0.4",
]

[tool.hatch.build.targets.wheel]
# Include Django project and app packages from the src layout.
packages = [
  "src/mealplanner",
  "src/recipes",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # import order
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "SIM",# flake8-simplify
  "PT", # flake8-pytest-style
  "RUF" # ruff rules
]
ignore = [
  "E501", # handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["src"]
DJANGO_SETTINGS_MODULE = "mealplanner.settings"
